docs: record toolchain wave 1 in the forward register
Wave 1 landed seven commits. The register did not know about them.

The new section records what landed, the Boot 3.5 finding that removed
Spring Boot 4 from the critical path, the verified version facts with
their sources, the build proof, and two traps found in the work.

The status table named master. It now names the branch and its head.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014JpbDMU3hCfR633tYpAopH